--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Severity Level Assessment</title>
+    <title>Incident / Accident Notification Matrix</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- React -->
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-gray-50">
     <div class="container mx-auto py-8">
-        <h1 class="text-2xl font-bold text-center mb-6">Severity Level Assessment</h1>
+        <h1 class="text-2xl font-bold text-center mb-6">Incident / Accident Notification Matrix</h1>
         <div id="root"></div>
     </div>
 
